<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group3.tcss450.uw.edu.thememebible.RegisterFragment">

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_initialfragment_button"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/username_loginfragment_label"
        android:inputType="textNoSuggestions|textVisiblePassword"
        android:layout_below="@+id/tvRegister"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editUsername"
        android:layout_alignStart="@+id/editUsername"
        android:layout_below="@+id/editUsername"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/password_loginfragment_label"
        android:inputType="textNoSuggestions|textPassword" />

    <EditText
        android:id="@+id/editPasswordConf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editPassword"
        android:layout_alignStart="@+id/editPassword"
        android:layout_below="@+id/editPassword"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/password_confirm_text"
        android:inputType="textNoSuggestions|textPassword" />


    <Button
        android:id="@+id/btnRegisterUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editPasswordConf"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/register_initialfragment_button" />

</RelativeLayout>
