<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragInitial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group3.tcss450.uw.edu.thememebible.InitialFragment"
    android:orientation="vertical"
    android:baselineAligned="false">

    <ImageView
        android:layout_width="118dp"
        android:layout_height="119dp"
        android:src="@drawable/cropped_doge"
        android:id="@+id/logo"

        android:layout_centerHorizontal="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="133dp"
        android:layout_marginLeft="123dp"
        android:layout_marginTop="69dp"
        android:contentDescription="@string/app_name" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/button"
        android:text="@string/login_initialfragment_button"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintVertical_bias="0.498"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.193" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/button"
        android:text="@string/register_initialfragment_button"
        app:layout_constraintLeft_toRightOf="@+id/btnLogin"
        android:layout_marginLeft="24dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"
        app:layout_constraintVertical_bias="0.498"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent" />

    <!--<TextView-->
        <!--android:id="@+id/tvInitial"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="24dp"-->
        <!--android:layout_marginRight="24dp"-->
        <!--android:layout_marginTop="@dimen/marginTop"-->
        <!--android:text="@string/initial_fragment_title_textview"-->
        <!--android:textSize="28sp"-->
        <!--android:textStyle="bold"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.502" />-->
</android.support.constraint.ConstraintLayout>
